--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-spinners": "^0.13.8",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
     "sanity": "^3.16.7",
     "styled-components": "5.2",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.5"
   },
   "devDependencies": {
