--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.3",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
     "@sanity/image-url": "^1.0.2",
