--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.0.3",
+    "@prisma/client": "^5.22.0",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
     "@sanity/image-url": "^1.0.2",
@@ -41,6 +42,7 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.3"
+    "@types/react-vertical-timeline-component": "^3.3.3",
+    "prisma": "^5.22.0"
   }
 }
